fixed navbar z-index issues

--- a/site/home/styles/index.css
+++ b/site/home/styles/index.css
@@ -7,6 +7,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
 }
 
 .title {
@@ -110,6 +111,7 @@ a {
     border-right: 0;
     border-bottom: 0;
     position: relative;
+    z-index: 0;
 }
 
 .article-right::after {
